[package]
name = "servers"
version = "0.1.0"
edition = "2018"

[dependencies]
askama = "0.12.0"
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "server1"
path = "src/server1.rs"

[[bin]]
name = "server2"
path = "src/server2.rs"

[[bin]]
name = "server3"
path = "src/server3.rs"

[[bin]]
name = "server4"
path = "src/server4.rs"

